# loftly-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_users.py  002_banks_currencies.py  003_cards.py  004_content.py  005_valuations.py  006_promos.py  007_affiliate.py  008_audit.py  009_selector_sessions.py  010_magic_link_provider.py  011_jobs.py  012_system_user.py  013_audit_log_retention_index.py  014_articles_stale_index.py  015_waitlist.py  016_users_last_login_at.py  017_authors.py  018_promos_active_idx.py  019_merchants_canonical.py  020_promos_promo_type_nullable.py  021_merchant_descriptions.py  021_merchant_logos.py
docs/: SEED_ROUND_DATA_ROOM.md  openapi.yaml
scripts/: __init__.py  run_manual_ingest.py  run_metrics_export.py  run_purges.py  run_selector_eval.py  run_valuation.py  seed_catalog.py  seed_starter_cards.py
scripts/dr/: README.md  __init__.py  _core.py  drill.py  list_snapshots.py  restore_db.py  snapshot_db.py
src/loftly/: __init__.py
src/loftly/ai/: __init__.py
src/loftly/api/: app.py  auth.py  errors.py  jwt_util.py  rate_limit.py
src/loftly/auth/: __init__.py
src/loftly/core/: cache.py  feature_flags.py  locale.py  logging.py  settings.py
src/loftly/data/: __init__.py
src/loftly/db/: audit.py  engine.py  migration_helpers.py  seed.py
src/loftly/jobs/: __init__.py  account_delete.py  audit_log_retention.py  canonicalize_merchants.py  valuation.py  (+7 more)
tests/: conftest.py  test_account_delete.py  test_admin_articles.py  test_admin_articles_stale.py  test_admin_cards.py  test_admin_ingestion_coverage.py  test_admin_merchants.py  test_admin_promos.py  test_affiliate_click.py  test_affiliate_csv_export.py  test_affiliate_stats.py  test_affiliate_webhook.py  test_anthropic_chaos.py  test_anthropic_provider.py  test_audit_log_retention.py  test_authors.py  test_cache_warm.py  test_cache_warm_personas.py  test_canonicalize_merchants.py  test_cards.py  test_cards_compare.py  test_cards_similar.py  test_chat_classifier.py  test_consent.py  test_content_stale_digest.py  test_cost_anomaly.py  test_data_export.py  test_deal_harvester_sync.py  test_dr_snapshot.py  test_email_sentry_langfuse.py  test_feature_flags.py  test_graceful_shutdown.py  test_health.py  test_locale.py  test_magic_link.py  test_manual_catalog_ingest.py  test_mapping_queue.py  test_me_endpoint.py  test_metrics_export.py  test_metrics_exporter.py  (+23 more)
tests/eval/: README.md  merchant_canonicalizer.jsonl  selector_golden_v2.jsonl
tests/services/: __init__.py  test_merchant_ranking.py  test_promo_snapshot.py
(+113 files in other folders)
